// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tsv formatter results are formatted as expected 1`] = `
Array [
  "21:48:05	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`tsv formatter results heading row added before first result 1`] = `
Array [
  "fetchTime	score	FCP	FMP	SI	FCI	TTI",
  "21:48:05	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`tsv formatter results userTimingMark uses default number format precision (2 digits) 1`] = `
Array [
  "21:48:05	95	0.9	1.0	1.1	3.2	4.0	1.25",
]
`;

exports[`tsv formatter stats stats are formatted as expected 1`] = `
Array [
  "",
  "median  	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`tsv formatter stats stddev uses custom precision for score (1 digit) 1`] = `
Array [
  "",
  "stddev  	95.0	0.9	1.0	1.1	3.2	4.0",
]
`;
